--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.4.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "22.9.0",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "9.14.0",
     "eslint-config-next": "15.0.2",
+    "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.4.14",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.6.3"
   }
 }
