--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "9.14.0",
     "eslint-config-next": "15.0.2",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "^15.0.3",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
